# hero

./: Cargo.toml  README.md  YEW.md
examples/pride-hero/: Cargo.toml  README.md
examples/pride-hero/src/: tailwind.css
examples/pride-hero/src/pages/: landing.rs
examples/yew/: Cargo.toml  README.md  index.html
examples/yew/src/: tailwind.css
examples/yew/src/pages/: landing.rs
src/: common.rs  lib.rs  yew.rs
src/css/pride/: brand-logo.css  calendar-button.css  event-image.css  header.css  hero-section.css  login-button.css  navigation.css  newsletter.css  pride-page.css  pride-title.css
src/yew/: hero1.rs  hero2.rs  hero3.rs  hero4.rs  pride.rs
