[package]
name = "hero-yew-example"
version = "0.1.0"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hero = { path = "../../", features = ["yew", "gae"] }
console_error_panic_hook = "0.1.7"
log = "0.4.27"
theme = { version = "0.0.3", features = ["yew"] }
wasm-logger = "0.2.0"
web-sys = { version = "0.3.77", features = ["MediaQueryList", "Window"] }
yew = { version = "0.21.0", features = ["csr"], default-features = false }
yew-router = { version = "0.18.0", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"
